src/main/java/kstates/KstatesParser.java
// Generated from kstates/Kstates.g4 by ANTLR 4.13.1
package kstates;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class KstatesParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		STATEMACHINE=1, ATTACHED=2, TO=3, STATES=4, STATE=5, INITIAL=6, ENTRY=7, 
		DO=8, SET=9, APPEND=10, EVENT=11, MACRO=12, EVAL=13, TRANSITIONS=14, TRANSITION=15, 
		SPLIT=16, JOIN=17, NOT=18, LOOPING=19, CONDITION=20, VALUE=21, MACROS=22, 
		TAKES=23, RETURNS=24, DEFINITION=25, REFERENCE=26, IF=27, IN=28, SCOPE=29, 
		ARROW=30, LBRACE=31, RBRACE=32, LPAREN=33, RPAREN=34, COMMA=35, STRING=36, 
		SSTRING=37, IDENT=38, NUMBER=39, WS=40, LINE_COMMENT=41, SYMBOL=42;
	public static final int
		RULE_kstates_file = 0, RULE_statemachine = 1, RULE_states_block = 2, RULE_state_definition = 3, 
		RULE_entry_block = 4, RULE_do_block = 5, RULE_action_block = 6, RULE_action_item = 7, 
		RULE_in_scope_block = 8, RULE_action_rule = 9, RULE_action_operation = 10, 
		RULE_action_right_side = 11, RULE_macro_call = 12, RULE_eval_statement = 13, 
		RULE_transitions_block = 14, RULE_transition_definition = 15, RULE_normal_transition = 16, 
		RULE_split_transition = 17, RULE_join_transition = 18, RULE_not_looping = 19, 
		RULE_condition_block = 20, RULE_condition_clause = 21, RULE_event_condition = 22, 
		RULE_value_condition = 23, RULE_macros_block = 24, RULE_macro_definition = 25, 
		RULE_takes_directive = 26, RULE_returns_directive = 27, RULE_return_expression = 28, 
		RULE_type_expression = 29, RULE_typed_call_expression = 30, RULE_reference_expression = 31, 
		RULE_definition_block = 32, RULE_eval_code_block = 33, RULE_code_content = 34;
	private static String[] makeRuleNames() {
		return new String[] {
			"kstates_file", "statemachine", "states_block", "state_definition", "entry_block", 
			"do_block", "action_block", "action_item", "in_scope_block", "action_rule", 
			"action_operation", "action_right_side", "macro_call", "eval_statement", 
			"transitions_block", "transition_definition", "normal_transition", "split_transition", 
			"join_transition", "not_looping", "condition_block", "condition_clause", 
			"event_condition", "value_condition", "macros_block", "macro_definition", 
			"takes_directive", "returns_directive", "return_expression", "type_expression", 
			"typed_call_expression", "reference_expression", "definition_block", 
			"eval_code_block", "code_content"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'STATEMACHINE'", "'ATTACHED'", "'TO'", "'STATES'", "'STATE'", 
			"'INITIAL'", "'ENTRY'", "'DO'", "'SET'", "'APPEND'", "'EVENT'", "'MACRO'", 
			"'EVAL'", "'TRANSITIONS'", "'TRANSITION'", "'SPLIT'", "'JOIN'", "'NOT'", 
			"'LOOPING'", "'CONDITION'", "'VALUE'", "'MACROS'", "'TAKES'", "'RETURNS'", 
			"'DEFINITION'", "'reference'", "'IF'", "'IN'", "'SCOPE'", "'->'", "'{'", 
			"'}'", "'('", "')'", "','"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "STATEMACHINE", "ATTACHED", "TO", "STATES", "STATE", "INITIAL", 
			"ENTRY", "DO", "SET", "APPEND", "EVENT", "MACRO", "EVAL", "TRANSITIONS", 
			"TRANSITION", "SPLIT", "JOIN", "NOT", "LOOPING", "CONDITION", "VALUE", 
			"MACROS", "TAKES", "RETURNS", "DEFINITION", "REFERENCE", "IF", "IN", 
			"SCOPE", "ARROW", "LBRACE", "RBRACE", "LPAREN", "RPAREN", "COMMA", "STRING", 
			"SSTRING", "IDENT", "NUMBER", "WS", "LINE_COMMENT", "SYMBOL"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Kstates.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public KstatesParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Kstates_fileContext extends ParserRuleContext {
		public StatemachineContext statemachine() {
			return getRuleContext(StatemachineContext.class,0);
		}
		public TerminalNode EOF() { return getToken(KstatesParser.EOF, 0); }
		public Kstates_fileContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_kstates_file; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof KstatesVisitor ) return ((KstatesVisitor<? extends T>)visitor).visitKstates_file(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Kstates_fileContext kstates_file() throws RecognitionException {
		Kstates_fileContext _localctx = new Kstates_fileContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_kstates_file);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(70);
			statemachine();
			setState(71);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StatemachineContext extends ParserRuleContext {
		public TerminalNode STATEMACHINE() { return getToken(KstatesParser.STATEMACHINE, 0); }
		public TerminalNode ATTACHED() { return getToken(KstatesParser.ATTACHED, 0); }
		public TerminalNode TO() { return getToken(KstatesParser.TO, 0); }
		public TerminalNode STRING() { return getToken(KstatesParser.STRING, 0); }
		public TerminalNode LBRACE() { return getToken(KstatesParser.LBRACE, 0); }
		public States_blockContext states_block() {
			return getRuleContext(States_blockContext.class,0);
		}
		public Transitions_blockContext transitions_block() {
			return getRuleContext(Transitions_blockContext.class,0);
		}
		public TerminalNode RBRACE() { return getToken(KstatesParser.RBRACE, 0); }
		public Macros_blockContext macros_block() {
			return getRuleContext(Macros_blockContext.class,0);
		}
		public StatemachineContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statemachine; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof KstatesVisitor ) return ((KstatesVisitor<? extends T>)visitor).visitStatemachine(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StatemachineContext statemachine() throws RecognitionException {
		StatemachineContext _localctx = new StatemachineContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_statemachine);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(73);
			match(STATEMACHINE);
			setState(74);
			match(ATTACHED);
			setState(75);
			match(TO);
			setState(76);
			match(STRING);
			setState(77);
			match(LBRACE);
			setState(78);
			states_block();
			setState(79);
			transitions_block();
			setState(81);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==MACROS) {
				{
				setState(80);
				macros_block();
				}
			}

			setState(83);
			match(RBRACE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class States_blockContext extends ParserRuleContext {
		public TerminalNode STATES() { return getToken(KstatesParser.STATES, 0); }
		public TerminalNode LBRACE() { return getToken(KstatesParser.LBRACE, 0); }
		public TerminalNode RBRACE() { return getToken(KstatesParser.RBRACE, 0); }
		public List<State_definitionContext> state_definition() {
			return getRuleContexts(State_definitionContext.class);
		}
		public State_definitionContext state_definition(int i) {
			return getRuleContext(State_definitionContext.class,i);
		}
		public States_blockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_states_block; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof KstatesVisitor ) return ((KstatesVisitor<? extends T>)visitor).visitStates_block(this);
			else return visitor.visitChildren(this);
		}
	}

	public final States_blockContext states_block() throws RecognitionException {
		States_blockContext _localctx = new States_blockContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_states_block);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(85);
			match(STATES);
			setState(86);
			match(LBRACE);
			setState(90);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==STATE || _la==INITIAL) {
				{
				{
				setState(87);
				state_definition();
				}
				}
				setState(92);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(93);
			match(RBRACE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class State_definitionContext extends ParserRuleContext {
		public TerminalNode STATE() { return getToken(KstatesParser.STATE, 0); }
		public TerminalNode STRING() { return getToken(KstatesParser.STRING, 0); }
		public TerminalNode LBRACE() { return getToken(KstatesParser.LBRACE, 0); }
		public TerminalNode RBRACE() { return getToken(KstatesParser.RBRACE, 0); }
		public TerminalNode INITIAL() { return getToken(KstatesParser.INITIAL, 0); }
		public Entry_blockContext entry_block() {
			return getRuleContext(Entry_blockContext.class,0);
		}
		public Do_blockContext do_block() {
			return getRuleContext(Do_blockContext.class,0);
		}
		public List<State_definitionContext> state_definition() {
			return getRuleContexts(State_definitionContext.class);
		}
		public State_definitionContext state_definition(int i) {
			return getRuleContext(State_definitionContext.class,i);
		}
		public State_definitionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_state_definition; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof KstatesVisitor ) return ((KstatesVisitor<? extends T>)visitor).visitState_definition(this);
			else return visitor.visitChildren(this);
		}
	}

	public final State_definitionContext state_definition() throws RecognitionException {
		State_definitionContext _localctx = new State_definitionContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_state_definition);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(96);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==INITIAL) {
				{
				setState(95);
				match(INITIAL);
				}
			}

			setState(98);
			match(STATE);
			setState(99);
			match(STRING);
			setState(100);
			match(LBRACE);
			setState(102);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==ENTRY) {
				{
				setState(101);
				entry_block();
				}
			}

			setState(105);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==DO) {
				{
				setState(104);
				do_block();
				}
			}

			setState(110);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==STATE || _la==INITIAL) {
				{
				{
				setState(107);
				state_definition();
				}
				}
				setState(112);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(113);
			match(RBRACE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Entry_blockContext extends ParserRuleContext {
		public TerminalNode ENTRY() { return getToken(KstatesParser.ENTRY, 0); }
		public Action_blockContext action_block() {
			return getRuleContext(Action_blockContext.class,0);
		}
		public Entry_blockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_entry_block; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof KstatesVisitor ) return ((KstatesVisitor<? extends T>)visitor).visitEntry_block(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Entry_blockContext entry_block() throws RecognitionException {
		Entry_blockContext _localctx = new Entry_blockContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_entry_block);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(115);
			match(ENTRY);
			setState(116);
			action_block();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Do_blockContext extends ParserRuleContext {
		public TerminalNode DO() { return getToken(KstatesParser.DO, 0); }
		public Action_blockContext action_block() {
			return getRuleContext(Action_blockContext.class,0);
		}
		public Do_blockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_do_block; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof KstatesVisitor ) return ((KstatesVisitor<? extends T>)visitor).visitDo_block(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Do_blockContext do_block() throws RecognitionException {
		Do_blockContext _localctx = new Do_blockContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_do_block);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(118);
			match(DO);
			setState(119);
			action_block();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Action_blockContext extends ParserRuleContext {
		public TerminalNode LBRACE() { return getToken(KstatesParser.LBRACE, 0); }
		public TerminalNode RBRACE() { return getToken(KstatesParser.RBRACE, 0); }
		public List<Action_itemContext> action_item() {
			return getRuleContexts(Action_itemContext.class);
		}
		public Action_itemContext action_item(int i) {
			return getRuleContext(Action_itemContext.class,i);
		}
		public Action_blockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_action_block; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof KstatesVisitor ) return ((KstatesVisitor<? extends T>)visitor).visitAction_block(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Action_blockContext action_block() throws RecognitionException {
		Action_blockContext _localctx = new Action_blockContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_action_block);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(121);
			match(LBRACE);
			setState(125);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 134221312L) != 0)) {
				{
				{
				setState(122);
				action_item();
				}
				}
				setState(127);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(128);
			match(RBRACE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Action_itemContext extends ParserRuleContext {
		public Action_ruleContext action_rule() {
			return getRuleContext(Action_ruleContext.class,0);
		}
		public In_scope_blockContext in_scope_block() {
			return getRuleContext(In_scope_blockContext.class,0);
		}
		public Action_itemContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_action_item; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof KstatesVisitor ) return ((KstatesVisitor<? extends T>)visitor).visitAction_item(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Action_itemContext action_item() throws RecognitionException {
		Action_itemContext _localctx = new Action_itemContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_action_item);
		try {
			setState(132);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case SET:
			case APPEND:
			case EVENT:
				enterOuterAlt(_localctx, 1);
				{
				setState(130);
				action_rule();
				}
				break;
			case IF:
				enterOuterAlt(_localctx, 2);
				{
				setState(131);
				in_scope_block();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class In_scope_blockContext extends ParserRuleContext {
		public TerminalNode IF() { return getToken(KstatesParser.IF, 0); }
		public TerminalNode IN() { return getToken(KstatesParser.IN, 0); }
		public TerminalNode SCOPE() { return getToken(KstatesParser.SCOPE, 0); }
		public TerminalNode LPAREN() { return getToken(KstatesParser.LPAREN, 0); }
		public List<TerminalNode> STRING() { return getTokens(KstatesParser.STRING); }
		public TerminalNode STRING(int i) {
			return getToken(KstatesParser.STRING, i);
		}
		public TerminalNode RPAREN() { return getToken(KstatesParser.RPAREN, 0); }
		public Action_blockContext action_block() {
			return getRuleContext(Action_blockContext.class,0);
		}
		public List<TerminalNode> COMMA() { return getTokens(KstatesParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(KstatesParser.COMMA, i);
		}
		public In_scope_blockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_in_scope_block; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof KstatesVisitor ) return ((KstatesVisitor<? extends T>)visitor).visitIn_scope_block(this);
			else return visitor.visitChildren(this);
		}
	}

	public final In_scope_blockContext in_scope_block() throws RecognitionException {
		In_scope_blockContext _localctx = new In_scope_blockContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_in_scope_block);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(134);
			match(IF);
			setState(135);
			match(IN);
			setState(136);
			match(SCOPE);
			setState(137);
			match(LPAREN);
			setState(138);
			match(STRING);
			setState(143);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(139);
				match(COMMA);
				setState(140);
				match(STRING);
				}
				}
				setState(145);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(146);
			match(RPAREN);
			setState(147);
			action_block();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Action_ruleContext extends ParserRuleContext {
		public Action_operationContext action_operation() {
			return getRuleContext(Action_operationContext.class,0);
		}
		public TerminalNode LPAREN() { return getToken(KstatesParser.LPAREN, 0); }
		public TerminalNode STRING() { return getToken(KstatesParser.STRING, 0); }
		public TerminalNode COMMA() { return getToken(KstatesParser.COMMA, 0); }
		public Action_right_sideContext action_right_side() {
			return getRuleContext(Action_right_sideContext.class,0);
		}
		public TerminalNode RPAREN() { return getToken(KstatesParser.RPAREN, 0); }
		public Action_ruleContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_action_rule; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof KstatesVisitor ) return ((KstatesVisitor<? extends T>)visitor).visitAction_rule(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Action_ruleContext action_rule() throws RecognitionException {
		Action_ruleContext _localctx = new Action_ruleContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_action_rule);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(149);
			action_operation();
			setState(150);
			match(LPAREN);
			setState(151);
			match(STRING);
			setState(152);
			match(COMMA);
			setState(153);
			action_right_side();
			setState(154);
			match(RPAREN);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Action_operationContext extends ParserRuleContext {
		public TerminalNode SET() { return getToken(KstatesParser.SET, 0); }
		public TerminalNode APPEND() { return getToken(KstatesParser.APPEND, 0); }
		public TerminalNode EVENT() { return getToken(KstatesParser.EVENT, 0); }
		public Action_operationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_action_operation; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof KstatesVisitor ) return ((KstatesVisitor<? extends T>)visitor).visitAction_operation(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Action_operationContext action_operation() throws RecognitionException {
		Action_operationContext _localctx = new Action_operationContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_action_operation);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(156);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & 3584L) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Action_right_sideContext extends ParserRuleContext {
		public Macro_callContext macro_call() {
			return getRuleContext(Macro_callContext.class,0);
		}
		public Eval_statementContext eval_statement() {
			return getRuleContext(Eval_statementContext.class,0);
		}
		public TerminalNode STRING() { return getToken(KstatesParser.STRING, 0); }
		public Action_right_sideContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_action_right_side; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof KstatesVisitor ) return ((KstatesVisitor<? extends T>)visitor).visitAction_right_side(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Action_right_sideContext action_right_side() throws RecognitionException {
		Action_right_sideContext _localctx = new Action_right_sideContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_action_right_side);
		try {
			setState(161);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case MACRO:
				enterOuterAlt(_localctx, 1);
				{
				setState(158);
				macro_call();
				}
				break;
			case EVAL:
				enterOuterAlt(_localctx, 2);
				{
				setState(159);
				eval_statement();
				}
				break;
			case STRING:
				enterOuterAlt(_localctx, 3);
				{
				setState(160);
				match(STRING);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Macro_callContext extends ParserRuleContext {
		public TerminalNode MACRO() { return getToken(KstatesParser.MACRO, 0); }
		public TerminalNode LPAREN() { return getToken(KstatesParser.LPAREN, 0); }
		public List<TerminalNode> STRING() { return getTokens(KstatesParser.STRING); }
		public TerminalNode STRING(int i) {
			return getToken(KstatesParser.STRING, i);
		}
		public TerminalNode RPAREN() { return getToken(KstatesParser.RPAREN, 0); }
		public List<TerminalNode> COMMA() { return getTokens(KstatesParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(KstatesParser.COMMA, i);
		}
		public Macro_callContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_macro_call; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof KstatesVisitor ) return ((KstatesVisitor<? extends T>)visitor).visitMacro_call(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Macro_callContext macro_call() throws RecognitionException {
		Macro_callContext _localctx = new Macro_callContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_macro_call);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(163);
			match(MACRO);
			setState(164);
			match(LPAREN);
			setState(165);
			match(STRING);
			setState(170);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(166);
				match(COMMA);
				setState(167);
				match(STRING);
				}
				}
				setState(172);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(173);
			match(RPAREN);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
